--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "typeRoots": ["node_modules/@types", "types"],
+    "skipLibCheck": true
   }
 }
